
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2017-08-05 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.7.3.4


2017-08-04 niel
	Chg: Bring in Darius' new TMDb library code. Switching to use php-tmdb/api library from github.
	Fix: Remove auto sorting from composer.json as it lists bower-assets/* before the package which
		handles them.
2017-08-03 DariusIII
	Fix: Check for existing apikey before sending request to GiantBomb.
2017-08-03 niel
	Fix: Replace spaces with tab, causing steam_app last_update setting to fail on insertion.
2017-07-30 niel
	Chg: Move location for predb-progress.txt to the standard configuration directory.
2017-07-27 DariusIII
	Chg: Add auto sorting and autoloader optimization to composer.json
2017-07-19 niel
	Chg: Set 'updated' date to zero value when inserting new IRCScraper entries. Should prevent
		certain errors cause by bad SQL modes.
2017-07-14 niel
	Chg: Make version checks in .../nzedb/NZB.php and .../nzedb/Tmux.php use the XML file instead
		of the repository.
	Chg: Update composer.lock file for updated steamfront version.
2017-06-26 niel
	Fix: Removed check for tpg in collection_regexes-test.php's template.
2017-06-21 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.7.3.3


2017-06-21 niel
	Fix: Add 'ORDER BY 'id' ASC' clause to SQL patch 0482, to make sure they don't get done out
		of order, causing duplicate index errors.
2017-06-21 DariusIII
	Fix: Use PNotify instead of noty in Charisma theme - Potential fix for issue #2478
2017-06-20 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.7.3.2


2017-06-19 niel
	Add: Created custom Model class to extend Lithium's. It adds a new method `isModified` to